--- a/survey-app/package.json
+++ b/survey-app/package.json
@@ -2,7 +2,10 @@
   "name": "survey-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://lokjunneo.github.io/video-survey",
   "dependencies": {
+    "@tailwindcss/cli": "^4.1.12",
+    "@tailwindcss/postcss": "^4.1.12",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.7.0",
     "@testing-library/react": "^16.3.0",
@@ -12,9 +15,11 @@
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "firebase": "^12.1.0",
+    "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-scripts": "5.0.1",
+    "tailwindcss": "^4.1.12",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -22,7 +27,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
